--- a/src/style/index.css
+++ b/src/style/index.css
@@ -15,3 +15,245 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: rgba(45, 45, 45, 0.03);
 }
+
+code {
+  font-family:
+    source-code-pro,
+    Menlo,
+    Monaco,
+    Consolas,
+    "Courier New",
+    monospace;
+}
+
+.header {
+  background-color: white;
+}
+
+.header-items {
+  display: flex;
+  width: 60%;
+  justify-content: space-between;
+  float: left;
+}
+
+.user-icon {
+  float: right;
+  display: flex;
+  justify-content: center;
+  width: 10%;
+  margin-top: 15px;
+}
+
+.main-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.select {
+  display: flex;
+  align-items: center;
+}
+
+.title {
+  color: #419bf9;
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.books {
+  display: flex;
+  align-items: center;
+}
+
+ p {
+  font-size: 12px;
+}
+
+.category {
+  margin-right: 20px;
+}
+
+.fa-user-o {
+  color: #507bff;
+  border: 2px solid rgb(141, 136, 136);
+  padding: 10px;
+  border-radius: 50%;
+  font-weight: 700;
+}
+
+.books-table {
+  margin: 0 auto;
+}
+
+.book {
+  margin: 15px auto;
+  display: flex;
+  justify-content: space-between;
+  width: 1200px;
+  height: 170px;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #fff;
+}
+
+.partition-1 {
+  width: 44%;
+  padding: 20px 30px;
+}
+
+.partition-2 {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.partition-3 {
+  width: 30%;
+  padding-left: 65px;
+}
+
+.update-btn,
+.add-book-btn {
+  color: #fff;
+  width: 184px;
+  height: 33px;
+  border: unset;
+  border-radius: 3px;
+  background-color: #0290ff;
+}
+
+.mini-h5 {
+  color: #121212;
+  opacity: 0.5;
+  font-size: 13px;
+  font-weight: 300;
+  margin-bottom: 0;
+}
+
+.chapter {
+  font-size: 16px;
+  font-weight: 300;
+  margin-bottom: 30px;
+}
+
+.oval {
+  width: 68px;
+  height: 68px;
+  border: 5px solid #307bbe;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.percent {
+  width: 68px;
+  height: 39px;
+  font-size: 32px;
+  margin: 0;
+}
+
+.completed {
+  width: 80px;
+  height: 18px;
+  opacity: 0.5;
+  font-size: 14px;
+  color: #121212;
+}
+
+.details {
+  width: 200px;
+  border-right: 2px solid #e8e8e8;
+}
+
+.cat {
+  color: #121212;
+  opacity: 0.5;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.title {
+  margin-top: 3px;
+  margin-bottom: 10px;
+}
+
+.author {
+  font-size: 14px;
+  color: #4386bf;
+}
+
+ul {
+  padding-left: 0;
+}
+
+ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding-right: 15px;
+  padding-left: 15px;
+  border-right: 2px solid #e8e8e8;
+  font-weight: 300;
+  font-size: 13px;
+  color: #4386bf;
+  cursor: pointer;
+}
+
+ul li:first-child {
+  padding-left: 0;
+}
+
+ul li:last-child {
+  border-right: unset;
+}
+
+.remove-btn {
+  border: unset;
+  color: #4386bf;
+  background-color: unset;
+  cursor: pointer;
+}
+
+.book-form-div {
+  margin: 20px auto;
+  width: 1200px;
+}
+
+.book-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hr {
+  border: solid 1px #e8e8e8;
+}
+
+.new-book-title {
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: -0.18px;
+  color: #888;
+}
+
+.form-title {
+  width: 664px;
+  height: 45px;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #fff;
+  padding-left: 20px;
+}
+
+.select-cat {
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  background-color: #fff;
+  color: #c4c4c4;
+  border: unset;
+}
+
+.add-book-btn {
+  width: 200px;
+  height: 45px;
+}
