--- a/src/style/index.css
+++ b/src/style/index.css
@@ -55,7 +55,7 @@ code {
   align-items: center;
 }
 
-.title {
+.cms {
   color: #419bf9;
   font-weight: 900;
   font-size: 20px;
@@ -66,7 +66,7 @@ code {
   align-items: center;
 }
 
- p {
+p {
   font-size: 12px;
 }
 
